# fordev

./: .gitignore  .readthedocs.yml  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
doc/: README.md
docs/: docs_requirements.txt
docs/source/: conf.py  contributions.rst  demo.rst  index.rst  install.rst  license.rst  terms.rst
docs/source/fordev/: core.rst  filters.rst  fordev.rst  generators.rst  validators.rst
fordev/: __about__.py  __init__.py  _author.py  _base.py  _const.py  _filter.py  const.py  consts.py  core.py  filters.py  generator.py  generators.py  utils.py  validator.py  validators.py
fordev/generators/: __init__.py  bank_account.py  certificate.py  city.py  cnh.py  cnpj.py  company.py  cpf.py  credit_card.py  people.py  pis_pasep.py  renavam.py  rg.py  state_registration.py  uf.py  vehicle.py  voter_title.py
fordev/validators/: __init__.py  bank_account.py  certificate.py  cnh.py  cnpj.py  cpf.py  credit_card.py  pis_pasep.py  renavam.py  rg.py  state_registration.py  utils.py  voter_title.py
tests/: fixtures.py  test_filters.py  test_generators.py  test_validators.py
